Added frontend container and api tests

--- a/.env_template
+++ b/.env_template
@@ -1,5 +1,13 @@
+# Database
 # Mongo db credentials
 MONGO_DB_USERNAME=MONGO_DB_USERNAME
 MONGO_DB_PASSWORD=MONGO_DB_PASSWORD
 MONGO_HOST_DATA_LOCATION=/project/docker-dependency-services/mongo_db/data
+
+# API
+#Location for the API code
 API_HOST_SYSTEM_LOCATION=/project/docker-dependency-services/api
+
+# Frontend
+#Location of the build directory for the frontend
+FRONTEND_BUILD_LOCATION=/project/docker-dependency-services/frontend/build
