--- a/docker-dependency-services/nginx/nginx.conf
+++ b/docker-dependency-services/nginx/nginx.conf
@@ -34,3 +34,16 @@ server {
 
 }
 
+
+   server {
+        listen 80 default_server;
+        server_name  localhost;
+
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+
+        location /{
+            try_files $uri $uri/ /index.html;
+        }
+    }
+
